MetrialDesign-3 Rename activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/MaterialAnimations">
         <activity
-            android:name=".NextActivity"
+            android:name=".DetailActivity"
             />
-        <activity android:name=".RecyclerMainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
